<?xml version="1.0"?>
<package>
  <name>ros_peoplemodel</name>
  <version>0.0.1</version>
  <description>The ros_peoplemodel package</description>

  <maintainer email="ralf.mayet@mindcloud.ai">elggem</maintainer>
  <license>Unlicense</license>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
